--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
 .fruits-list {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-between;
   list-style: none;
   margin: 0 auto;
@@ -31,11 +32,12 @@
   width: 1000px;
 }
 .fruits-list li {
-  flex-basis: calc(33.33% - 10px);
+  /* flex-basis: calc(33.33% - 10px); */
   margin-bottom: 20px;
   position: relative;
   width: 350px;
   height: 350px;
+  border: 1px solid #ff0000;
 }
 .fruits-list img {
   display: block;
